--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -13,6 +13,10 @@ services:
     image: redis
 #    restart: always # prod mode
 
+  client:
+    build: ../frontend
+#    restart: always # prod mode
+
   nginx:
     image: nginx
 #    restart: always # prod mode
@@ -24,6 +28,7 @@ services:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./.data/static-django:/static-django
       - ./.data/media-django:/media-django
+
 
   backend:
     build:
