--- a/infrastructure/services/nginx/nginx.conf
+++ b/infrastructure/services/nginx/nginx.conf
@@ -10,15 +10,15 @@ http {
     server {
         server_name _;
 
-        location /media {
+        location /media-django {
             alias /media-django/;
         }
 
-        location /static {
+        location /static-django {
             alias /static-django/;
         }
 
-        location / {
+        location ~ ^/(api|admin) {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,5 +30,10 @@ http {
             proxy_set_header Connection "upgrade";
             proxy_pass http://backend:8000;
         }
+
+        location / {
+            proxy_pass http://client:80;
+        }
+
     }
 }
